// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Common/Article Basic 1`] = `
<div
  className="commonarticle-basic-muipaper-root-1 commonarticle-basic-makestyles-root-1 commonarticle-basic-muipaper-elevation1-1 commonarticle-basic-muipaper-rounded-1"
>
  <div
    className="commonarticle-basic-makestyles-header-1"
  >
    <img
      alt="Hudson Inc logo"
      className="commonarticle-basic-makestyles-outletlogo-1"
      src="http://placeimg.com/100/100"
    />
    <div
      className="commonarticle-basic-makestyles-info-1"
    >
      <p
        className="commonarticle-basic-muitypography-root-1 commonarticle-basic-makestyles-title-1 commonarticle-basic-makestyles-oneline-1 commonarticle-basic-muitypography-body1-1"
      >
        Aliqua nisi culpa eiusmod quis veniam consequat esse
      </p>
      <p
        className="commonarticle-basic-muitypography-root-1 commonarticle-basic-makestyles-details-1 commonarticle-basic-makestyles-oneline-1 commonarticle-basic-muitypography-body1-1"
      >
        Hudson Inc | December 25, 2000
      </p>
    </div>
  </div>
  <img
    alt="Aliqua nisi culpa eiusmod quis veniam consequat esse thumbnail"
    className="commonarticle-basic-makestyles-photo-1"
    src="http://placeimg.com/1280/720/city"
  />
  <p
    className="commonarticle-basic-muitypography-root-1 commonarticle-basic-makestyles-blurb-1 commonarticle-basic-muitypography-body2-1"
  >
    Optio consectetur ad reprehenderit nostrum est. Quasi tenetur omnis porro quisquam nihil sequi eaque eum officiis. Aut maxime et occaecati voluptatem in voluptatum. Rerum et sed dignissimos quasi vel blanditiis consequatur magni eaque.
  </p>
</div>
`;

exports[`Storyshots Common/Article With Link 1`] = `
<div
  className="commonarticle-with-link-muipaper-root-1 commonarticle-with-link-makestyles-root-1 commonarticle-with-link-muipaper-elevation1-1 commonarticle-with-link-muipaper-rounded-1"
>
  <div
    className="commonarticle-with-link-makestyles-header-1"
  >
    <img
      alt="Hudson Inc logo"
      className="commonarticle-with-link-makestyles-outletlogo-1"
      src="http://placeimg.com/100/100"
    />
    <div
      className="commonarticle-with-link-makestyles-info-1"
    >
      <p
        className="commonarticle-with-link-muitypography-root-1 commonarticle-with-link-makestyles-title-1 commonarticle-with-link-makestyles-oneline-1 commonarticle-with-link-muitypography-body1-1"
      >
        <a
          className="commonarticle-with-link-muitypography-root-1 commonarticle-with-link-muilink-root-1 commonarticle-with-link-muilink-underlinehover-1 commonarticle-with-link-muitypography-colorprimary-1"
          href="https://www.google.com"
          onBlur={[Function]}
          onFocus={[Function]}
          rel="noopener noreferrer"
          target="_blank"
        >
          Aliqua nisi culpa eiusmod quis veniam consequat esse
        </a>
      </p>
      <p
        className="commonarticle-with-link-muitypography-root-1 commonarticle-with-link-makestyles-details-1 commonarticle-with-link-makestyles-oneline-1 commonarticle-with-link-muitypography-body1-1"
      >
        Hudson Inc | December 25, 2000
      </p>
    </div>
  </div>
  <a
    className="commonarticle-with-link-muitypography-root-1 commonarticle-with-link-muilink-root-1 commonarticle-with-link-muilink-underlinehover-1 commonarticle-with-link-makestyles-link-1 commonarticle-with-link-muitypography-colorprimary-1"
    href="https://www.google.com"
    onBlur={[Function]}
    onFocus={[Function]}
    rel="noopener noreferrer"
    target="_blank"
  >
    <img
      alt="Aliqua nisi culpa eiusmod quis veniam consequat esse thumbnail"
      className="commonarticle-with-link-makestyles-photo-1"
      src="http://placeimg.com/1280/720/city"
    />
  </a>
  <p
    className="commonarticle-with-link-muitypography-root-1 commonarticle-with-link-makestyles-blurb-1 commonarticle-with-link-muitypography-body2-1"
  >
    Optio consectetur ad reprehenderit nostrum est. Quasi tenetur omnis porro quisquam nihil sequi eaque eum officiis. Aut maxime et occaecati voluptatem in voluptatum. Rerum et sed dignissimos quasi vel blanditiis consequatur magni eaque.
  </p>
</div>
`;
